# web2dataset

./: .gitignore  00_core.ipynb  Makefile  README.md  index.ipynb  pyproject.toml  settings.ini
.github/workflows/: main.yml
docs/: Downloader.html  Gemfile  _config.yml  cleaner.html  cli.html  core.html  document.html  downloader.html  index.html  paralel.html  searcher.html  sidebar.json  torch_dataset.html  utils_data.html
docs/_data/: topnav.yml
docs/_data/sidebars/: home_sidebar.yml
docs/_site/: cleaner.html  core.html  document.html  downloader.html  index.html  searcher.html
nbs/: 00_core.ipynb  Downloader.ipynb  cleaner.ipynb  cli.ipynb  document.ipynb  downloader.ipynb  index.ipynb  paralel.ipynb  purger.ipynb  searcher.ipynb  torch_dataset.ipynb  utils_data.ipynb
web2dataset/: _nbdev.py  cleaner.py  cli.py  document.py  documet.py  downloader.py  main.ipynb  paralel.py  purger.py  searcher.py  torch_dataset.py  utils_data.py
