[tool.poetry]
name = "web2dataset"
version = "0.1.0"
description = ""
authors = ["sami jaghouar <sami.jaghouar@hotmail.fr>"]

[tool.poetry.dependencies]
python = "^3.8"
selenium = "^4.1.0"
uuid = "^1.30"
docarray = "^0.12"
matplotlib = "^3.5.1"
rich = "^12.0"

[tool.poetry.dev-dependencies]
Pillow = "^8.4.0"
nbdev = "^1.2"
jupyterlab-code-formatter = "^1.4.10"
black = "^21.8b0"
isort = "^5.9.3"
jupyterlab = "^3.3"
jupyter-client = "7.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
